[package]
name = "bevy-spooky-jam"
version = "0.1.0"
edition = "2021"

# TODO: Remove dynamic_linking for releasie (can this be a build profile?)
[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
bevy_common_assets = { version = "0.11.0", features = ["yaml"] }
serde = { version = "1" }
serde_yaml = { version = "0.9", optional = true }

[features]
yaml = ["dep:serde_yaml"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

